# opencl-examples

./: AppInfo.h.in  CMakeLists.txt  COPYING  README.md
cmake/: InstallDependencies.cmake  PrepareQt.cmake
filters/: image_processing.cl
include/: CPUCounter.h  ExampleLogger.h  FileLogger.h  ImageProcessingDialog.h  ImageViewWidget.h  LogManager.h  LogUtils.h  LogWidget.h  Logger.h  OCLUtils.h  Timer.h  ToolWindow.h
res/: OCLExample.icns  OCLExample.rc
src/: ExampleLogger.cpp  FileLogger.cpp  ImageProcessingDialog.cpp  ImageViewWidget.cpp  LogManager.cpp  LogWidget.cpp  Logger.cpp  OCLUtils.cpp  Timer.cpp  ToolWindow.cpp  main.cpp
ui/: ImageProcessingDialog.ui  ImageViewWidget.ui  LogWidget.ui
